# sous-clip

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: release.yml
backend/: .env.example  pyproject.toml
backend/backend/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py  telemetry.py  worker.py
backend/backend/routes/: auth.py  extract.py  progress.py  queue.py  recipes.py  settings.py
backend/backend/services/: auth.py  downloader.py  extractor.py  mealie.py  queue.py  settings.py  transcriber.py
backend/backend/workflows/: extraction.py
backend/tests/: conftest.py  test_auth_dependency.py  test_auth_service.py  test_downloader.py  test_extractor.py  test_integration.py  test_models.py  test_queue_service.py  test_routes_auth.py  test_routes_extract.py  test_routes_progress.py  test_routes_queue.py  test_routes_recipes.py  test_routes_settings.py  test_schemas.py  test_settings_service.py  test_telemetry.py  test_transcriber.py  test_workflow.py
docs/: banner.html  configuration.md  pwa.md  reverse-proxy.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/components/: CommandPalette.tsx  CompletionToast.tsx  Layout.tsx  PipelineSteps.tsx  QueueList.tsx  RecipeCard.tsx  RecipeDrawer.tsx  RecipeView.tsx
frontend/src/hooks/: useExtract.ts  useProgress.ts  useQueue.ts  useRecipes.ts  useSettings.ts  (+1 more)
landing/: package-lock.json
scripts/: download-model.py
(+13 files in other folders)
